fix overflow issues on small (mobile) devices

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 body {
-  overflow: hidden;
   height: 100vh;
 }
 
